# vk-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
include/: camera.h  gui.h  renderer.h  window.h
shaders/: compile.bat  compile.sh  shader.frag  shader.vert
src/: camera.cc  gui.cc  main.cc  renderer.cc  window.cc
